fixes: gave boxes rounded corner, and colors, alignment issues.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,3 +56,10 @@ body {
 .bg-light-grey:hover {
   background-color: #ffffff !important;
 }
+.clear-button {
+  background-color: #ff6347;
+}
+.mx-45 {
+  margin-left: 1.8rem !important;
+  margin-right: 2.9rem !important;
+}
